# grepplus-rs

./: .gitattributes  .gitignore  ADDING_A_LANGUAGE.md  AGENTS.md  CHANGELOG-0.3.0-draft.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTES-sol1.md  NOTES-sol4.md  README.md  SECURITY.md  SUPPORT.md  THIRD_PARTY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: agent-benchmark.yml  ci.yml  codeql.yml  coding-benchmark.yml  release.yml  security-audit.yml  summary-quality.yml  task-bank-audit.yml
bench/: README.md  agent_utility.sh  freshness_bench.sh  grep_compat.sh  qwen35_llama_cpp_baseline.md  release_package_smoke.ps1  release_package_smoke.sh  run_all.sh  runtime_footprint.py  summary_quality.py  test_runtime_footprint.py  test_summary_quality.py
bench/agent_coding/: .gitignore  README.md  build_tasks.py  build_tasks_v2.py  forensics_bench.py  hard_selection.json  run_benchmark.py  select_hard.py  swe_bench_adapter.py  task.schema.json  task_v2.schema.json  tasks_hard.json  tasks_v1.json  tasks_v2.json  test_benchmark.py  trace_forensics.py  validated_v2.jsonl.bak-pre-flask-retry
bench/agent_coding/prompts/: greppy_system_v3.md  mscc_skill_v3.md
bench/agent_efficiency/: .gitignore  BENCHMARK_CONTRACT.md  README.md  acceptance_run.py  aggregate_runs.py  context_cost.py  forensics.py  gen_corpus.py  gen_corpus.sh  gen_real_tasks.py  gen_tasks.py  grade_answers.py  kimi-provider.js  large_repo_stress.py  parallel_acceptance_run.py  real_corpus.py  recall_audit.py  release_gate.py  run_bench.py  spectrum_env.py  spot_tests.py  swe_qa_adapter.py  task_classes.json  task_classes_v2.json  tasks.json  tasks_v2.json  test_gen_real_tasks.py  test_release_gate.py  verify_metrics.py  verify_real_tasks.py  verify_tasks.py
bench/agent_efficiency/realcorpus/: MANIFEST.json
bench/agent_efficiency/sweqa/: sweqa_test.jsonl
bench/battle/: README.md  concurrency.sh  determinism.sh  grep_fuzz.sh  lib.sh  malformed.sh  multilang.sh  navigation.sh  robustness.sh  run_battle.sh  scale.sh  soak.sh
bench/fixtures/sample/: README.md
bench/hardware-evidence/: README.md
bench/inference_performance/: CMakeLists.txt  README.md  __init__.py  collect.py  contract.py  greppy_prompts.jsonl  llama_contract.cpp  test_collect.py  test_verify.py  verify.py
bench/summary_quality/: README.md  cases_v1.json
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: changes.rs  embed_daemon.rs  inference_daemon.rs  lib.rs  main.rs  map.rs  summarize_daemon.rs  verify.rs
crates/cli/tests/: changes_grid.rs  cli_hardening.rs  context_and_code.rs  edit_m4.rs  edit_m5.rs  edit_plan_usability.rs  edit_postel.rs  edit_schema_examples.rs  edit_smoke.rs  graph_grid_cpp.rs  graph_grid_csharp.rs  graph_grid_elixir.rs  graph_grid_kotlin.rs  graph_grid_ruby.rs  graph_nav.rs  graph_nav_name_collision.rs  grep_passthrough.rs  grep_passthrough_non_utf8.rs  grep_passthrough_safety.rs  map_grid.rs  nav_postel.rs  read_file_dispatch.rs  rg_passthrough.rs  search_code_empty.rs  stats_path_callees.rs  verify_grid.rs
crates/core/: Cargo.toml
crates/core/src/: cache.rs  diag.rs  error.rs  git_fingerprint.rs  lib.rs  logging.rs  membudget.rs  profile.rs  spans.rs  strutil.rs  sysinfo.rs  validate.rs  workspace.rs
crates/discover/: Cargo.toml
crates/discover/src/: language.rs  lib.rs  skip.rs
crates/edit/: Cargo.toml
crates/edit/src/: certificate.rs  data.rs  ensure.rs  handle.rs  journal.rs  lib.rs  plan.rs  publish.rs  shadow.rs  txn.rs  verbs.rs
crates/edit/tests/: grid_go.rs  grid_javascript.rs  grid_python.rs  grid_typescript.rs  journal_crash.rs  m3_structural.rs  m4_semantic_data.rs  m5_plans.rs  txn_property.proptest-regressions  txn_property.rs
crates/embed-native/: Cargo.toml  build.rs
crates/embed-native/examples/: bench_prefill.rs  embedding_inference_contract.rs
crates/embed-native/src/: backend.rs  cpu_features.rs  gguf.rs  lib.rs  matmul.rs  model.rs  performance.rs  quant.rs  tokenizer.rs
crates/embed-native/tests/: api_contract.rs  cuda_forward_parity.rs  dequant_parity.rs  forward_parity.rs  metal_forward_parity.rs  metal_kernel_parity.rs  robustness.rs  tokenizer_parity.rs
crates/freshness/: Cargo.toml
crates/freshness/src/: fingerprint.rs  incremental.rs  lib.rs  lock.rs
crates/grepplus/src/: heuristic.rs  main.rs  run.rs  sidecar.rs
crates/grepplus/tests/: drop_in_safety.rs
crates/greppy/: Cargo.toml
crates/greppy/examples/: freshness-probe.rs
crates/greppy/src/: heuristic.rs  lib.rs  main.rs  rg.rs  run.rs  sidecar.rs
crates/greppy/tests/: drop_in_safety.rs  grep_passthrough.rs
crates/indexer/: Cargo.toml
crates/indexer/examples/: bench_embed_index.rs  profile_index.rs
crates/indexer/src/: embedding.rs  lib.rs  structural.rs
crates/parser/: Cargo.toml  build.rs
crates/parser/src/: extract.rs  lib.rs  provider.rs  query.rs  spec.rs
crates/qwen35-native/: Cargo.toml
crates/qwen35-native/examples/: qwen_inference_contract.rs
crates/qwen35-native/src/: cpu.rs  inventory.rs  lib.rs  model.rs  postprocess.rs  sampler.rs  simd_math.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: graph.rs  lexical.rs  lib.rs  semantic.rs  simhash.rs  trace.rs  vector.rs
crates/store/: Cargo.toml
crates/store/examples/: bench_vector_scan.rs
docs/contracts/: EDIT_CONTRACT.md  change-signature-spec.minimal.json  edit-certificate.v1.schema.json  edit-plan.minimal.json  edit-plan.v1.schema.json  verify-report.v1.schema.json
licenses/: EMBEDDED-MODEL-TERMS.md  EMBEDDINGGEMMA-MODIFICATIONS.txt  EMBEDDINGGEMMA-NOTICE.txt  EMBEDDINGGEMMA-PROVENANCE.json  GEMMA-PROHIBITED-USE-POLICY.html  GEMMA-TERMS.html  MINIMAX-M3-TERMS-SNAPSHOT.txt  MODEL-REDISTRIBUTION.lock.json  QWEN3.5-MODIFICATIONS.txt  QWEN3.5-PROVENANCE.json  QWEN3.5-TRAINING-DATA-MANIFEST.json
packaging/msix/: AppxManifest.xml.in
tools/: test_verify_workflow_action_pins.py  verify_workflow_action_pins.py
(+98 files in other folders)
