[package]
name = "greppy-grep"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "greppy grep drop-in wrapper (real grep passthrough + heuristics)"

[[bin]]
name = "greppy-grep"
path = "src/main.rs"

[[example]]
name = "freshness-probe"
path = "examples/freshness-probe.rs"

[dependencies]
greppy-core = { path = "../core" }
greppy-freshness = { path = "../freshness" }
greppy-search = { path = "../search" }
greppy-store = { path = "../store" }
greppy-indexer = { path = "../indexer" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
which = { workspace = true }
