[package]
name = "greppy-passthrough"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "Internal byte-exact real-grep passthrough library for greppy"

[[example]]
name = "freshness-probe"
path = "examples/freshness-probe.rs"

[dependencies]
greppy-core = { path = "../core" }
which = { workspace = true }

[dev-dependencies]
greppy-freshness = { path = "../freshness" }
greppy-store = { path = "../store" }
greppy-indexer = { path = "../indexer" }
serde_json = { workspace = true }
