[package]
name = "greppy-resolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "greppy import, call, and type resolution"

[dependencies]
greppy-core = { path = "../core" }
greppy-parser = { path = "../parser" }
greppy-store = { path = "../store" }
thiserror = { workspace = true }
tracing = { workspace = true }
