[package]
name = "greppy-search"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
description = "greppy graph, lexical, and semantic search"

[dependencies]
greppy-core = { path = "../core" }
greppy-embed-native = { path = "../embed-native" }
greppy-store = { path = "../store" }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
